--- a/Meshes/Meshes.vcxproj
+++ b/Meshes/Meshes.vcxproj
@@ -100,6 +100,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -115,6 +116,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -123,6 +125,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Gyroid.cpp" />
+    <ClCompile Include="Isosurface.cpp" />
+    <ClCompile Include="Decimate.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="math3D.cpp" />
+    <ClCompile Include="mesh.cpp" />
+    <ClCompile Include="Sphere.cpp" />
+    <ClCompile Include="vector.cpp" />
+    <ClCompile Include="Vertex.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Array3D.h" />
+    <ClInclude Include="Decimate.h" />
+    <ClInclude Include="Gyroid.h" />
+    <ClInclude Include="Isosurface.h" />
+    <ClInclude Include="math3D.h" />
+    <ClInclude Include="mesh.h" />
+    <ClInclude Include="Sphere.h" />
+    <ClInclude Include="vector.h" />
+    <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
